Moved files generated by tests and fixed sample_rate param in precompute_spectrograms_for_audio_file

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+**/.vscode
 **/.venv
 **/__pycache__
+
 assets/Samples/
 assets/Resources/
 assets/Models/gtzan/
 assets/Models/sinewave/
 history/
-.vscode/
+tests/output/
